user icon added to html home page Nav bar updated to look like prototype Is bootstrap better to do or is that too messy and should convert to css? Updated the search bar to be partially functioning if I have time to finish at end

--- a/public/style.css
+++ b/public/style.css
@@ -1,33 +1,14 @@
-
-/*navigation bar*/
-.nav-bar {
-    border: 2px solid black;
+nav {
+    background-color: #4a90e2;
 }
 
-/*logo/brand name*/
-
-.risky{
-    text-align: center;
-    padding: 20px;
-    font-size: 20px;
-}
-
-
-/*search bar*/
 .search-bar{
-    border: 2px solid black;
-    padding: 10px;
+    width:40%;
 }
-
-.search-bar form{
-    width: 50%;
-}
-
-
-
-/*add risk*/
-.add-risk{
-    border:2px solid black;
+.plus-button{
+    width: 36px; 
+    height: 36px; 
+    font-size: 20px;
 }
 
 /*risk status and severity(level) icon colours*/
